--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,4 +17,5 @@
     <color name="myBlack">#111</color>
     <color name="gray">#b9b9b9</color>
     <color name="myWhite">#ffffff</color>
+    <color name="myGreen">#54BD54</color>
 </resources>
