--- a/app/src/main/res/layout/activity_view_recipe.xml
+++ b/app/src/main/res/layout/activity_view_recipe.xml
@@ -85,11 +85,13 @@
     <ListView
         android:id="@+id/ingredients"
         android:layout_width="match_parent"
-        android:layout_height="230dp"
+        android:layout_height="match_parent"
         android:layout_marginLeft="60dp"
         android:layout_marginTop="12dp"
         android:layout_centerHorizontal="true"
         android:layout_below="@+id/nutrientInfo"
+        android:layout_above="@id/viewOtherRecipeBtn"
+        android:layout_marginBottom="12dp"
         android:scrollbars="vertical" />
 
     <!--<View
@@ -290,10 +292,10 @@
 
                 </LinearLayout>
 
-                <View
+                <!--<View
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
-                    android:background="@color/gray" />
+                    android:background="@color/gray" />-->
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -364,10 +366,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/color_button"
-        android:layout_below="@id/ingredients"
+        android:layout_above="@id/menu_bar"
+        android:layout_marginBottom="20dp"
         android:layout_centerHorizontal="true"
         android:layout_marginLeft="180dp"
-        android:layout_marginTop="18dp"
         android:textColor="@color/yellowAccent"
         android:text="다른 레시피 보기"/>
 
