--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -58,8 +58,8 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textSize">12dp</item>
         <item name="android:layout_weight">1.5</item>
+        <item name="android:layout_margin">2dp</item>
         <item name="android:layout_marginRight">10dp</item>
-        <item name="android:padding">2dp</item>
         <item name="android:gravity">center_vertical</item>
         <item name="android:textColor">@color/myBlack</item>
     </style>
